<resources>
    <string name="app_name">Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="numeric">Numeric</string>
    <string name="age">Age</string>
    <string name="temperature">Temperature</string>
    <string name="today_s_date">Today\'s Date:</string>
    <string name="enter_your_birthday">Enter your Birthday:</string>
    <string name="calculate_age">Calculate Age</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="enter_temperature_in_c">Enter temperature </string>
    <string name="convert_to">Convert To</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="to">to</string>
</resources>