<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:padding="5dp"
    tools:context=".TemperatureFragment">

    <TextView
        android:id="@+id/tv_convert_from_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_to"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_convert_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:padding="5dp"
        android:text="@string/celsius"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/til_input_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_convert_from_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_input_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/enter_temperature_in_c"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_convert_from_title"
        app:layout_constraintTop_toBottomOf="@id/tv_convert_from_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiel_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/tv_to"
        android:text="@string/to"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/tv_convert_to_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_input_temperature" />
    <TextView
        android:id="@+id/tv_convert_to_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:padding="5dp"
        android:text="@string/fahrenheit"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/til_input_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_to" />

    <TextView
        android:id="@+id/tv_convert_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/til_input_temperature"
        app:layout_constraintTop_toBottomOf="@id/tv_to" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_convert"
        app:layout_constraintTop_toBottomOf="@id/tv_convert_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"
        android:text="Convert"/>

</androidx.constraintlayout.widget.ConstraintLayout>